--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -37,7 +37,7 @@
         </div>
     </main>
     <footer>
-        <a href="https://www.sejuku.net/corp/">&copy;SAMURAI WEATHER NEWS.
+        <a href="https://www.sejuku.net/corp/">&copy;SAMURAI WEATHER NEWS
         </a>
     </footer>
   </body>
