--- a/mockcoding/index.html
+++ b/mockcoding/index.html
@@ -13,24 +13,56 @@
     <body>
         <header>
             <nav>
-                <p class="taitle">MyProfile</p>
+                <div id="title-box">
+                <a href="index.html" id="nav-title">MyProfile</a>
+                </div>
                 <div id="menu">
-                    <p>About</p>
-                    <p>Works</p>
+                    <a href="index.html#about">About</a>
+                    <a href="index.html#works">Works</a>
                 </div>
             </nav>
         </header>
         <main>
-            <img id="mainvisual" src="image/main.png" alt="メインビジュアル">
             <article>
-                <div>
-                    <div id="about">
-                        <p class="menu-title">About</p>
-                        <img id="about-img" src="image/about.png" alt="Kazuki Asahinaの写真">
-                        <div id=""
-                    </div>
+                <div id="main-visual">
+                    <img src="image/main.png" alt="メインビジュアル">
                 </div>
+                <section id="about">
+                    <p class="section-title">About</p>
+                    <div id="about-flex">
+                        <img id="about-left" src="image/about.png" alt="Kazuki Asahinaの写真">
+                        <div id="about-right">
+                            <p>Kazuki Asahina</p>
+                            <ul>
+                                <li>25歳 長野県佐久市出身</li>
+                                <li>ソフトウェア業界でマーケティングに従事</li>
+                                <li>趣味はカメラ、愛機はCanon</li>
+                                <li>自然を撮影するのが好きで、海や山によく行く</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <section id="works">
+                    <p class="section-title">Works</p>
+                    <div id="works-flex">
+                        <div class="works-card">
+                            <img class="works-img" src="image/works1.png" alt="新潟の海">
+                            <p class="works-content">新潟に訪れた際に、日本海の雄大さに魅了されて撮影した1枚</p>
+                        </div>
+                        <div class="works-card">
+                            <img class="works-img" src="image/works2.png" alt="御嶽山">
+                            <p class="works-content">地元長野の木曽町から撮影した、冠雪した御嶽山</p>
+                        </div>
+                        <div class="works-card">
+                            <img class="works-img" src="image/works3.png" alt="京都の古き良き日本の町並み">
+                            <p class="works-content">京都で撮影した、明け方の古き良き日本の町並み</p>
+                        </div>
+                    </div>
+                </section>
             </article>
+            <footer>
+                <p>&copy; MyProfile. All rights reserved.</p>
+            </footer>
         </main>
     </body>
 </html>
